Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-51350

Builds on OS X 10.9 disabled

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.7.0 Beta
    • 5.7.0 Alpha
    • WebEngine
    • None
    • macOS
    • 0b66f60c4620ca79942a41e52f8c96fa2a00b91c

    Description

      We have several issues making building on OS X 10.9 difficult.

      A bug in XCode 6.x have been worked around: https://codereview.qt-project.org/#/c/149903/

      But another issue caused this error to suddenly appear in the 5.7 branch: /Users/qt/work/qt/qtwebengine/src/3rdparty/chromium/content/browser/renderer_host/input/synthetic_gesture_target_mac.mm:24:21: error: unknown type name 'NSEventModifierFlags'

      And this issue remain in with 49-based:
      Module "qt/qtwebengine" (16e81521c1f5a0b3930f480246c71e7caa70396f) did not compile:
      /Users/qt/work/qt/qtwebengine/src/3rdparty/chromium/ui/base/cocoa/base_view.mm:174:34: warning: instance method '-stage' not found (return type defaults to 'id') [-Wobjc-method-access]
      /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.10.sdk/System/Library/Frameworks/AppKit.framework/Headers/NSEvent.h:175:12: note: receiver is instance of class declared here
      /Users/qt/work/qt/qtwebengine/src/3rdparty/chromium/ui/base/cocoa/base_view.mm:174:13: error: cannot initialize a variable of type 'NSInteger' (aka 'long') with an rvalue of type 'id'

      Attachments

        For Gerrit Dashboard: QTBUG-51350
        # Subject Branch Project Status CR V

        Activity

          People

            alexandru.croitor Alexandru Croitor
            allan.jensen Allan Sandfeld Jensen
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes