Fix build on OS X Mavericks (10.9)

Define unsupported NSEventModifierFlags type.

Task-number: QTBUG-51350
Change-Id: Ia66cbf9c6323b5961fd86eb4687e1b9f06e4fae7
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@theqtcompany.com>
Reviewed-by: Alexandru Croitor <alexandru.croitor@theqtcompany.com>